Included IGBT model into extraction circuit

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.py[cod]
 *.asv
 *.bak
-model*/spice/**/*.log
-model*/spice/**/*.raw
+model**/spice/**/*.log
+model**/spice/**/*.raw
+model**/spice/**/*.net
 __pycache__/
